--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                 if (idx_pw==pw){
                     localStorage.setItem("logged-in", true);
                     localStorage.setItem("user", entered_un);
-                    window.location.href = "sbl_home.html";
+                    window.location.href = "3pl_home.html";
                 }
             }          
         }
