--- a/3pl_history.html
+++ b/3pl_history.html
@@ -64,7 +64,8 @@
             <tr>
               <td>Most Week Wins</td>
               <td><strong>Kyle Kagan:</strong> 4<br>
-              <strong>River Fox-Welch:</strong> 4</td>
+              <strong>River Fox-Welch:</strong> 4<br>
+              <strong>Nolan Sankey:</strong> 4</td>
             </tr>
             <tr>
               <td>Highest Week Score</td>
@@ -77,7 +78,9 @@
                   <strong>Ryan Blankemeier:</strong> 5 (1/31/2021)<br>
                   <strong>Justin Baker:</strong> 5 (11/8/2021)<br>
                   <strong>Tommy Henninger:</strong> 5 (11/8/2021)<br>
-                  <strong>Kyle Bensink:</strong> 5 (12/5/2022)</td>
+                  <strong>Kyle Bensink:</strong> 5 (12/5/2022)<br>
+                  <strong>Rijul Garg:</strong> 5 (11/18/2024<br>
+                  <strong>Ryan Blankemeier (2):</strong> 5 (11/25/2024</td>
             </tr>
             <tr>
               <td>Longest Three Pointer Streak in a Week</td>
@@ -105,6 +108,30 @@
             </tr>
           </thead>  
           <tbody>
+            <tr>
+              <td>Season 12, Week 6<br>(12/23/2024)</td>
+              <td><strong>Tim Roberts (2):</strong> 27</td> 
+            </tr>
+            <tr>
+              <td>Season 12, Week 5<br>(12/16/2024)</td>
+              <td><strong>Chris Pieper:</strong> 21</td> 
+            </tr>
+            <tr>
+              <td>Season 12, Week 4<br>(12/9/2024)</td>
+              <td><strong>Kevin Sankey:</strong> 26</td> 
+            </tr>
+            <tr>
+              <td>Season 12, Week 3<br>(12/2/2024)</td>
+              <td><strong>Nolan Sankey (4):</strong> 23</td> 
+            </tr>
+            <tr>
+              <td>Season 12, Week 2<br>(11/25/2024)</td>
+              <td><strong>Ryan Blankemeier (2):</strong> 32</td> 
+            </tr>
+            <tr>
+              <td>Season 12, Week 1<br>(11/18/2024)</td>
+              <td><strong>Rijul Garg (2):</strong> 33</td> 
+            </tr>
             <tr>
               <td>Season 11, Week 6<br>(1/22/2024)</td>
               <td><strong>Ian O'Grady:</strong> 26</td> 
@@ -355,6 +382,10 @@
           </thead>  
           <tbody>
             <tr>
+              <td>Season 12</td>
+              <td><strong>River Fox-Welch:</strong> 40.00%</td> 
+            </tr>
+            <tr>
               <td>Season 11</td>
               <td><strong>Chris Pieper (2):</strong> 43.33%</td> 
             </tr>
@@ -415,6 +446,10 @@
             </tr>
           </thead>  
           <tbody>
+           <tr>
+              <td>Season 12</td>
+              <td>52.35%</td> 
+            </tr> 
             <tr>
               <td>Season 11</td>
               <td>53.93%</td> 
